# captionator

./: .gitignore  README.md  captionator.service  requirements.txt  sample.ini  setup.cfg  setup.py
captionator/: __main__.py  config.py  db.py  google_ocr.py  main.py  memory_db.py  ocr.py  server.py  tesseract_ocr.py
captionator/views/: add.j2  base.html  root.j2  update.j2  view.j2
captionator/views/js/: add.js  root.js  update.js  view.js
