[metadata]
name = captionator
version = 1.0
description = Web-service to display captions from uploaded images
author = Adam Dyess
author_email = addyess@gmail.com
url = https://github.com/addyess/captionator

[options]
packages = captionator
install_requires =
      # opencv-python
      # pytesseract
      google-cloud-vision
      mysql-connector-python
      bottle
      jinja2
[options.extras_require]
testing =
      black
      pyflakes

[options.package_data]
captionator =
      views/*
      views/img/*
      views/js/*


[options.entry_points]
console_scripts =
      captionator = captionator.main:main